Archive2/5d/77bfc9677f8831/output
main.cpp: In function 'int main()':
main.cpp:14:20: error: variable 'std::ifstream myfile' has initializer but incomplete type
     ifstream myfile("test.txt");
                    ^
main.cpp:19:18: error: invalid operands of types '<unresolved overloaded function type>' and 'const char [23]' to binary 'operator<<'
         count << "Error opening the file" << endl;
                  ^
main.cpp:33:14: error: aggregate 'std::ofstream outputfile' has incomplete type and cannot be defined
     ofstream outputfile;
              ^
